fix: fix content shift with select input
https://github.com/shadcn-ui/ui/issues/977
https://github.com/radix-ui/primitives/issues/1925#issuecomment-1741992864

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,14 @@
   }
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
+body[style] {
+  margin: 0 auto !important;
+}
+
 
 @layer base {
   * {
